[package]
name = "illumination"
version = "0.2.0"
authors = ["okno <paul.delafosse@protonmail.com>"]
edition = "2018"
build = "build/build.rs"

[dependencies]
neovim-lib = "0.6"
horrorshow = "0.6.2"
webkit2gtk = "0.8"
pulldown-cmark = { version = "0.6", default-features = false, features = ["simd"] }
pango = "0.7"
fragile = "0.3.0"
glib= "0.8"
gio = "0.7"
config = "0.9"
lazy_static = "1.4.0"
dirs = "2.0"


[build-dependencies]
dirs = "2.0"


[dependencies.log]
version = "0.4"
features = ["max_level_debug", "release_max_level_warn"]

[dependencies.gtk]
features = ["v3_22"]
version = "0.7"

[dependencies.sourceview]
features = ["v3_22"]
version = "0.7"
