[package]
name = "illumination"
version = "0.2.0"
authors = ["Paul D <paul.delafosse@protonmail.com>"]
edition = "2018"
build = "build/build.rs"
license = "MIT"
repository = "https://github.com/oknozor/illumination"
description = """
A simple Neovim plugin to render buffers in a WebKit2Gtk window.
"""

[dependencies]
neovim-lib = "0.6"
horrorshow = "0.6.2"
webkit2gtk = "0.8"
pulldown-cmark = { version = "0.6", default-features = false, features = ["simd"] }
pango = "0.7"
fragile = "0.3.0"
glib= "0.8"
gio = "0.7"
config = "0.9"
lazy_static = "1.4.0"
dirs = "2.0"
clap = "2.33.0"


[build-dependencies]
dirs = "2.0"

[dependencies.log]
version = "0.4"
features = ["max_level_debug", "release_max_level_warn"]

[dependencies.gtk]
features = ["v3_22"]
version = "0.7"

[dependencies.sourceview]
features = ["v3_22"]
version = "0.7"
